[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game Scenes/Lottery/Packs/super_pack.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game Scenes/Lottery/Packs/common_pack.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game Scenes/Lottery/Packs/rare_pack.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Open_tab.gd" type="Script" id=4]

[node name="Open_tab" type="VBoxContainer"]
margin_right = 1026.0
margin_bottom = 597.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1026.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 339.0
margin_bottom = 296.0
size_flags_horizontal = 3
expand = true

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 343.0
margin_right = 682.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Owned:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 686.0
margin_right = 1026.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Open" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 340.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Open"

[node name="Open_all" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 340.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Open all"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 300.0
margin_right = 1026.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1026.0
margin_bottom = 297.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="common_pack" parent="ScrollContainer/HBoxContainer2" instance=ExtResource( 2 )]
margin_right = 339.0
margin_bottom = 297.0
size_flags_horizontal = 3

[node name="rare_pack" parent="ScrollContainer/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 343.0
margin_right = 682.0
margin_bottom = 297.0
size_flags_horizontal = 3

[node name="super_pack" parent="ScrollContainer/HBoxContainer2" instance=ExtResource( 1 )]
margin_left = 686.0
margin_right = 1026.0
margin_bottom = 297.0
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Open_all" to="." method="_on_Open_all_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer2/common_pack" to="." method="_on_common_pack_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer2/rare_pack" to="." method="_on_rare_pack_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer2/super_pack" to="." method="_on_super_pack_pressed"]
